Membuat Bagian Jumbotron

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
+
     <title>My Portfolio | Erika adisti</title>
   </head>
   <body>
@@ -49,6 +50,14 @@
           </div>
         </nav>
         <!-- navbar end -->
+
+        <!-- Jumbotron -->
+        <section class="jumbotron text-center">
+          <img src="img/erikajpg.jpg" style="margin-top: 50px" alt="ERIKA ADISTI" width="200" class="rounded-circle img-thumbnail" />
+          <h1 class="display-4">ERIKA ADISTI</h1>
+          <p class="lead">Lecturer | Soft Spoken</p>
+        </section>
+        <!-- Akhir Jumbotron -->
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
