--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
 
         <!-- Jumbotron -->
         <section class="jumbotron text-center">
-          <img src="img/erikajpg.jpg" style="margin-top: 50px" alt="ERIKA ADISTI" width="200" class="rounded-circle img-thumbnail" />
+          <img src="img/erikajpg.jpg" alt="ERIKA ADISTI" width="200" class="rounded-circle img-thumbnail" />
           <h1 class="display-4">ERIKA ADISTI</h1>
           <p class="lead">Lecturer | Soft Spoken</p>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#ffffff"
+              fill-opacity="1"
+              d="M0,96L26.7,112C53.3,128,107,160,160,165.3C213.3,171,267,149,320,154.7C373.3,160,427,192,480,202.7C533.3,213,587,203,640,170.7C693.3,139,747,85,800,80C853.3,75,907,117,960,128C1013.3,139,1067,117,1120,90.7C1173.3,64,1227,32,1280,32C1333.3,32,1387,64,1413,80L1440,96L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+            ></path>
+          </svg>
         </section>
         <!-- Akhir Jumbotron -->
 
