--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
         </section>
         <!-- Akhir Jumbotron -->
 
+        <!-- About -->
+        <section id="about">
+          <div class="container">
+            <div class="row text-center mb-5">
+              <div class="col">
+                <h2>About Me</h2>
+              </div>
+            </div>
+            <div class="row justify-content-center fs-5 text-center">
+              <div class="col-4">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In similique deleniti harum recusandae impedit doloremque voluptatem autem voluptatibus odit odio.</p>
+              </div>
+              <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis sit animi voluptas dicta dolorem quaerat dolorum, omnis blanditiis deserunt rem eius cum, mollitia neque iure?</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Akhir About -->
+
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       </body>
