--- a/index.html
+++ b/index.html
@@ -75,16 +75,83 @@
               </div>
             </div>
             <div class="row justify-content-center fs-5 text-center">
-              <div class="col-4">
+              <div class="col-4-md-4">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In similique deleniti harum recusandae impedit doloremque voluptatem autem voluptatibus odit odio.</p>
               </div>
-              <div class="col-4">
+              <div class="col-4-md-4">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis sit animi voluptas dicta dolorem quaerat dolorum, omnis blanditiis deserunt rem eius cum, mollitia neque iure?</p>
               </div>
             </div>
           </div>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill=" #e2edff"
+              fill-opacity="1"
+              d="M0,32L26.7,58.7C53.3,85,107,139,160,181.3C213.3,224,267,256,320,245.3C373.3,235,427,181,480,165.3C533.3,149,587,171,640,176C693.3,181,747,171,800,176C853.3,181,907,203,960,224C1013.3,245,1067,267,1120,250.7C1173.3,235,1227,181,1280,165.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+            ></path>
+          </svg>
         </section>
         <!-- Akhir About -->
+        <!-- Projects -->
+        <section id="projects">
+          <div class="container">
+            <div class="row text-center mb-3">
+              <div class="col">
+                <h2>My Projects</h2>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="img/PRODUK/B1.png" class="card-img-top" alt="project 1" />
+                  <div class="card-body">
+                    <p class="card-text">"Buat momen spesialmu makin berkesan dengan bucket bunga cantik dari kami 🌹💐 Setiap helai bunga, kami rangkai dengan cinta."</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="img/PRODUK/B2.png" class="card-img-top" alt="project 1" />
+                  <div class="card-body">
+                    <p class="card-text">"Ucapkan sayangmu tanpa kata... Cukup kirimkan bucket bunga ini, dan biarkan dia tahu betapa berartinya dia untukmu 💖"</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="img/PRODUK/B3.png" class="card-img-top" alt="project 1" />
+                  <div class="card-body">
+                    <p class="card-text">"Bingung kasih kado yang berkesan? Bucket bunga kami siap jadi solusi manis untuk hari ulang tahun, wisuda, atau kejutan cinta!"</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="img/PRODUK/B4.png" class="card-img-top" alt="project 1" />
+                  <div class="card-body">
+                    <p class="card-text">"Setiap warna punya makna. Merah untuk cinta, putih untuk ketulusan, pink untuk rasa sayang yang lembut. Yuk pilih bucket yang paling menggambarkan hatimu!"</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="img/PRODUK/B5.png" class="card-img-top" alt="project 1" />
+                  <div class="card-body">
+                    <p class="card-text">"Bucket bunga edisi spesial cuma ada minggu ini! Rangkaian eksklusif dengan bunga pilihan, cocok untuk hadiah tak terlupakan."</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#fff"
+              fill-opacity="1"
+              d="M0,192L80,176C160,160,320,128,480,149.3C640,171,800,245,960,234.7C1120,224,1280,128,1360,80L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+            ></path>
+          </svg>
+        </section>
+        <!-- Akhir Projects -->
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
