--- a/index.html
+++ b/index.html
@@ -145,13 +145,43 @@
           </div>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path
-              fill="#fff"
+              fill="#ffffff"
               fill-opacity="1"
-              d="M0,192L80,176C160,160,320,128,480,149.3C640,171,800,245,960,234.7C1120,224,1280,128,1360,80L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+              d="M0,64L26.7,101.3C53.3,139,107,213,160,250.7C213.3,288,267,288,320,272C373.3,256,427,224,480,202.7C533.3,181,587,171,640,181.3C693.3,192,747,224,800,208C853.3,192,907,128,960,133.3C1013.3,139,1067,213,1120,240C1173.3,267,1227,245,1280,229.3C1333.3,213,1387,203,1413,197.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
             ></path>
           </svg>
         </section>
         <!-- Akhir Projects -->
+        <!-- contact -->
+        <section id="contact">
+          <div class="container">
+            <div class="row text-center mb-3">
+              <div class="col">
+                <h2>Contact Me</h2>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-md-6">
+                <form>
+                  <div class="mb-3">
+                    <label for="name" class="form-label">Nama Lengkap</label>
+                    <input type="text" class="form-control" id="name" aria-describedby="name" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="email" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="pesan" class="form-label">Pesan</label>
+                    <textarea class="form-control" id="pesan" rows="3"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Kirim</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- contact end -->
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
