--- a/index.html
+++ b/index.html
@@ -180,8 +180,23 @@
               </div>
             </div>
           </div>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#aac4e6"
+              fill-opacity="1"
+              d="M0,64L48,80C96,96,192,128,288,144C384,160,480,160,576,149.3C672,139,768,117,864,133.3C960,149,1056,203,1152,224C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+            ></path>
+          </svg>
         </section>
         <!-- contact end -->
+        <!-- footer -->
+        <footer class="text-white text-center pb-5" style="background-color: #aac4e6">
+          <p>
+            Created with love by
+            <a href="https://www.instagram.com/3rikaadisti_?igsh=MzlmeDR3N2IzZGI3" class="text-white fw-bold">3rikaadisti_</a>
+          </p>
+        </footer>
+        <!-- footer -->
 
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
