--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
@@ -192,7 +193,7 @@
         <!-- footer -->
         <footer class="text-white text-center pb-5" style="background-color: #aac4e6">
           <p>
-            Created with love by
+            Created with <i class="bi bi-heart-fill text-danger"></i> by
             <a href="https://www.instagram.com/3rikaadisti_?igsh=MzlmeDR3N2IzZGI3" class="text-white fw-bold">3rikaadisti_</a>
           </p>
         </footer>
